[workspace]
members = [
  "crates/iv-server", 
  "crates/iv-client", 
  "crates/iv-tools", 
  "crates/iv-core", 
  "crates/iv-net", 
  "crates/iv-world", 
  "crates/iv-persistence", 
  "crates/iv-gameplay", 
  "crates/iv-utils", 
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["William Peacock"]

[workspace.dependencies]
# Core
anyhow = "1.0"
thiserror = "2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
bincode = "2.0.1"
uuid = { version = "1.18.0", features = ["v4"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter","fmt"] }

# Bevy / Client
bevy = "0.16.1"
wgpu = "26.0.1"

# Physics
rapier3d = "0.28.0"
bevy_rapier3d = "0.31.0"

# Netcode (Naia)
naia-shared = "0.24.0"
naia-client = "0.24.0"
naia-server = "0.24.0"

# Async & Server
tokio = { version = "1.47.1", features = ["full"] }
axum = "0.8.4"
hyper = "1.6.0"
tower = "0.5.2"

# DB & Cache 
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls","postgres","uuid","json"] }
redis = { version = "0.32.5", features = ["tokio-comp"] }

# RPC (future phases)
tonic = { version = "0.14.1", default-features = false, features = ["transport"] }
prost = "0.14.1"


