[package]
name = "iv-net"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
bevy = "0.16.1"

quinn = "0.11.8"
rustls = "0.23.31"
tokio = { version = "1.47.1", features = ["full"] }
bytes = "1.10.1"
serde = { version = "1.0",  features = ["derive"] }
bincode = "2.0"

