[package]
name = "iv-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
strip = "debuginfo"

[dependencies]
iv-core = { path="../iv-core" }
iv-net = { path="../iv-net" }

quinn = "0.11.8"

bevy = "0.16.1"

bincode = "2.0"
